--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
+    "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
@@ -44,6 +45,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "prettier": "2.8.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
